k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wishlist
  labels:
    app: wishlist
spec:
  rules:
    - host: wishlist.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wishlist
                port:
                  number: 8080
